# smn_archive

./: .gitignore  Cargo.toml  LICENCE  README.md
docs/: Docs_API.md  OVERVIEW.md  SmnArchive.md  Structures.md  _ Docs Overview.md  __ Docs Overview __.md
docs/.obsidian/: workspace.json
docs/Modules/: archive_tools.md
docs/Modules/io/: io_read_archive.md  io_write_archive.md
docs/Structures_Types/: Structures_Types_ID.md  Structures_Types_Misc.md  Structures_Types_Str.md
docs/smnarchive/: SmnArchive - SmnArchive_Glossary.md  SmnArchive - SmnArchive_Statistics.md  SmnArchive - Type Structures - Binary File.md  SmnArchive - Type Structures - Forms.md  SmnArchive - Type Structures - Values.md  SmnArchive_FFI.md  SmnArchive_Statistics.md  SmnArchive_Type_Structures_Binary_File.md  SmnArchive_Type_Structures_Forms.md  SmnArchive_Type_Structures_Values.md
src/: lib.rs  main.rs
src/archive_tools/: mod.rs
src/archive_tools/io/: io_delete_form.rs  io_read_archive.rs  io_read_block.rs  io_read_form.rs  io_struct.rs  io_utils.rs  io_write_archive.rs  io_write_block.rs  io_write_form.rs  mod.rs
src/archive_tools/structs/: mod.rs  struc_archive.rs  struc_form.rs  struc_form_refgroup.rs  struc_form_string.rs  struc_form_world.rs  types_id.rs
src/archive_tools/structs/forms/: mod.rs  struc_form.rs  struc_form_refgroup.rs  struc_form_string.rs  struc_form_world.rs
src/archive_tools/structs/types/: types_misc.rs  types_str.rs
src/archive_tools/tests/: mod.rs  test_archive.rs  test_forms.rs  test_io.rs  test_types.rs
src/archive_tools/types/: mod.rs  struc_types_id.rs  struc_types_misc.rs  struc_types_str.rs
src/bridge/: interchange_io.rs  mod.rs
src/core/: mod.rs
src/core/io/: mod.rs
src/core/io/read/: io_read_archive.rs  io_read_block.rs  io_read_form.rs  mod.rs
src/core/io/util/: io_struct.rs  io_utils.rs  mod.rs
src/core/structs/: mod.rs  struc_archive.rs
src/interchange/: interchange_io.rs  mod.rs
src/tooling/: mod.rs
src/tooling/automation/: build.rs  formtype_management.rs  mod.rs
src/tooling/cli/: cmd.rs  mod.rs
src/tooling/testing/: mod.rs  test_basic.rs  test_forms.rs  test_io.rs  test_sample.rs  test_todict.rs  test_types.rs
(+21 files in other folders)
