[package]
name = "smn_archive"
version = "0.1.5"
authors = ["Julien Liakos <julien_andrew@outlook.com>"]
edition = "2021"
description = "An archive editor for a custom smnarchive format (.smn)"
license = "SmnSource License V1.0 (Attached)"
repository = "https://github.com/SummonTheCat/smn_archive"
homepage = "https://summonthecat.com"
documentation = "attached"

[dependencies]
rand = "0.8"
log = "0.4"
env_logger = "0.9"
libc = "0.2"

[features]
c_api = []

[lib]
name = "smn_archive_extern"
crate-type = ["cdylib", "rlib"]

# Binary target for `cargo run`
[[bin]]
name = "smn_archive_bin"
path = "src/main.rs" 

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
